--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   image_gallery_saver: ^1.6.9
   dio: ^4.0.0
   crypto: ^3.0.1
+  permission_handler: ^8.1.4+2
 
 dev_dependencies:
   flutter_test:
