--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chat_image
 description: A Package for loading an image from the web, saving it locally in the galery and showing the locally saved image.
-version: 0.0.3
+version: 0.0.4
 repository: https://github.com/Babwenbiber/flutter_chat_image
 
 environment:
@@ -15,7 +15,7 @@ dependencies:
   image_gallery_saver: ^1.7.1
   dio: ^4.0.0
   crypto: ^3.0.1
-  permission_handler: ^8.1.4+2
+  permission_handler: ^8.2.5
 
 dev_dependencies:
   flutter_test:
